--- a/ForeignCurrency/src/main/resources/application.properties
+++ b/ForeignCurrency/src/main/resources/application.properties
@@ -4,3 +4,4 @@ server.contextPath=/currency
 # Spring MVC rleated
 spring.mvc.view.prefix=/WEB-INF/jsp/
 spring.mvc.view.suffix=.jsp
+rest.api.consume=https://api.ratesapi.io/api/
